--- a/MainPage.html
+++ b/MainPage.html
@@ -41,8 +41,9 @@
 
     </header>
     <aside>
+
+        <h3>Pointlessness League</h3>
         <table>
-            <caption>Pointlessness League</caption>
             <thead>
             <tr>
                 <th>Club</th>
@@ -82,42 +83,41 @@
         </table>
     </aside>
 
-    <hr/>
-
     <h2>Spectral Figure Found In Mowbray Park</h2>
 
-    <h3>Spirit Eyes Cannon</h3>
-
     <article>
+
         <img src="Images/Spectral Figure Discovered in Mowbray park.jpg" alt="Ghost with cannon" id="ghost" height="480" width="640">
 
         <div id="GhostText">
+
+            <h3>Spirit Eyes Cannon</h3>
+
             <p>The Ghost of General Havlock appears to be considering using the canon left in Mowbray park - in protest at moving his bin collection to Tuesdays instead of Thursday.</p>
             <p>The cannon, left pointing at the civic centre in case of another infestation of the Rage virus seems to be the target of the Victorian Millitaryman Shade's attentions. When pressed, the wraith said "I'm buried at Lucknow, so getting here to put the bins out for Tuesday is impossible, the connecting flights just aren't there."</p>
             <p>Queen Victoria, Greyfriars Bobby and Sunderland City council were unavailable for comment.</p>
         </div>
     </article>
 
-    <hr/>
-    <h3>Blandford Street Found "Wonky"</h3>
-
     <article>
         <img src="Images/CrookedBlandfordStreet.jpg" alt="Blandford street" id="street" height="480" width="640">
 
         <div id="StreetText">
+
+            <h3>Blandford Street Found "Wonky"</h3>
+
             <p>Keen shoppers were underterred as Blandford Street at the heart of the city was seen to be a bit skew-wiff.From Herbet Brown's to Debenhams, the whole street appeared tilted off to the rught somehow.</p>
-            <p>We contacted a pokesperson for H&T Pawnbrokers said "To be honest, we haven't noticed anything unusal outside. There has been no drop off in trade, punters are here putting their wedding rings on tick just a desperately as usual.”</p>Our roving photohrapher, Nathanial Ventricle, took this shocking image moments after picking up his new tripod form Chas Eagle's and Sons. Nathanial said "You know what's odd, the people on Blandford Street look wonky too- normally they'd be upri...oh.. wait…”</p>
+            <p>We contacted a pokesperson for H&T Pawnbrokers said "To be honest, we haven't noticed anything unusal outside. There has been no drop off in trade, punters are here putting their wedding rings on tick just a desperately as usual.”</p>Our roving photohrapher, Nathanial Ventricle, took this shocking image moments after picking up his new tripod form Chas Eagle's and Sons. Nathanial said "You know what's odd, the people on Blandford Street look wonky too- normally they'd be upri...oh.. wait…”
         </div>
     </article>
-
-    <hr/>
-
-    <h3>Amy's Winehouse Urged into Rehab</h3>
 
     <article>
         <img src="Images/AmysWinehouse.jpg" alt="Amys Winehouse" id="amy" height="480" width="640">
 
         <div id="AmyText">
+
+            <h3>Amy's Winehouse Urged into Rehab</h3>
+
             <p>Amy's Winehouse has said "no no no" to calls to enter rehab after complaints of rowdy behaviour about the songstressly-named offy. A neighbour, who wishes to remnain anonymous, has seen Amy's Winehouse selling the following in broad daylight:</p>
 
             <ul>
@@ -130,19 +130,18 @@
         </div>
     </article>
 
-    <hr/>
+    <footer>
 
-<footer>
+        <img src="Images/Our Editor.jpg" alt="Editor" id="OurEditor" height="241" width="190">
 
-    <img src="Images/Our Editor.jpg" alt="Editor" id="OurEditor" height="241" width="190">
+        <div id="Editor">
+            <h3>About our Editor</h3>
+            <p>Our cheif editor, Ahab McRadgie has had a long career in the media, despite his youth. Starting off taxing dafties for 20p, who he assured he needed the money to get home to his dying grandmother. He soon set to work selling the Big Issue, then graduated on to harder, more potent local newspapers. Ahab has been given a Regional Press Award for his scoop "Ryhope man catches train" and a restraining order after the incident with the inflatible crocodile, the vodka and small arms we don't talk about, but none one will ever forget. Even though we tried hard. So, so hard.</p>
+        </div>
 
-    <div id="Editor">
-        <h3>About our Editor</h3>
-        <p>Our cheif editor, Ahab McRadgie has had a long career in the media, despite his youth. Starting off taxing dafties for 20p, who he assured he needed the money to get home to his dying grandmother. He soon set to work selling the Big Issue, then graduated on to harder, more potent local newspapers. Ahab has been given a Regional Press Award for his scoop "Ryhope man catches train" and a restraining order after the incident with the inflatible crocodile, the vodka and small arms we don't talk about, but none one will ever forget. Even though we tried hard. So, so hard.</p>
-    </div>
-
-</footer>
+    </footer>
 </div>
 
 </body>
+
 </html>
