--- a/MainPage.html
+++ b/MainPage.html
@@ -17,11 +17,6 @@
 
         <h1>The Hendon Herald</h1>
 
-        <a id="News"></a>
-        <a id="Local"></a>
-        <a id="Sport"></a>
-        <a id="Stuff"></a>
-
         <nav>
             <ul>
                 <li id=Links>
@@ -39,7 +34,67 @@
             </ul>
         </nav>
 
+    <div>
+        <a id="News"></a>
+        <a id="Local"></a>
+        <a id="Sport"></a>
+        <a id="Stuff"></a>
+    </div>
+
     </header>
+
+    <main>
+
+
+    <article>
+
+        <h2>Spectral Figure Found In Mowbray Park</h2>
+
+        <img src="Images/Spectral Figure Discovered in Mowbray park.jpg" alt="Ghost with cannon" id="ghost" height="480" width="640">
+
+        <div id="GhostText">
+
+            <h3>Spirit Eyes Cannon</h3>
+
+            <p>The Ghost of General Havlock appears to be considering using the cannon left in Mowbray park - in protest at moving his bin collection to Tuesdays instead of Thursday.</p>
+            <p>The cannon, left pointing at the civic centre in case of another infestation of the Rage virus seems to be the target of the Victorian Millitaryman Shade's attentions. When pressed, the wraith said "I'm buried at Lucknow, so getting here to put the bins out for Tuesday is impossible, the connecting flights just aren't there."</p>
+            <p>Queen Victoria, Greyfriars Bobby and Sunderland City council were unavailable for comment.</p>
+        </div>
+    </article>
+<hr>
+    <article>
+        <img src="Images/CrookedBlandfordStreet.jpg" alt="Blandford street" id="street" height="480" width="640">
+
+        <div id="StreetText">
+
+            <h3>Blandford Street Found "Wonky"</h3>
+
+            <p>Keen shoppers were underterred as Blandford Street at the heart of the city was seen to be a bit skew-wiff.From Herbet Brown's to Debenhams, the whole street appeared tilted off to the right somehow.</p>
+            <p>We contacted a spokesperson for H&T Pawnbrokers said "To be honest, we haven't noticed anything unusal outside. There has been no drop off in trade, punters are here putting their wedding rings on tick just a desperately as usual.”</p>Our roving photohrapher, Nathanial Ventricle, took this shocking image moments after picking up his new tripod form Chas Eagle's and Sons. Nathanial said "You know what's odd, the people on Blandford Street look wonky too- normally they'd be upri...oh.. wait…”
+        </div>
+    </article>
+<hr>
+    <article>
+        <img src="Images/AmysWinehouse.jpg" alt="Amys Winehouse" id="amy" height="480" width="640">
+
+        <div id="AmyText">
+
+            <h3>Amy's Winehouse Urged into Rehab</h3>
+
+            <p>Amy's Winehouse has said "no no no" to calls to enter rehab after complaints of rowdy behaviour about the songstressly-named offy. A neighbour, who wishes to remain anonymous, has seen Amy's Winehouse selling the following in broad daylight:</p>
+
+            <ul>
+                <li>Fine wine & Champagnes</li>
+                <li>Rough Ciders & Spirits</li>
+                <li>Terry's Chocolate Orange, which no one ever seems to buy</li>
+            </ul>
+
+            <p>Amy's Winehouse ain't got the time to make a comment, adding the retail outlet's daddy thinks she's fine.</p>
+        </div>
+<hr>
+
+    </article>
+    </main>
     <aside>
 
         <h3>Pointlessness League</h3>
@@ -81,67 +136,67 @@
             </tr>
             </tbody>
         </table>
+
+        <h3>Submit Form</h3>
+
+        <form action="http://localhost:3000/submit" name="SubmissionForm" onsubmit="return validate()">
+
+          <label>Email: <input type="email" id="email" name="email"></label>
+            <label>Message: <input type="text" id="message" name="message"></label>
+
+            <button type="submit" value="Submit">submit</button>
+
+        </form>
     </aside>
-
-    <h2>Spectral Figure Found In Mowbray Park</h2>
-
-    <article>
-
-        <img src="Images/Spectral Figure Discovered in Mowbray park.jpg" alt="Ghost with cannon" id="ghost" height="480" width="640">
-
-        <div id="GhostText">
-
-            <h3>Spirit Eyes Cannon</h3>
-
-            <p>The Ghost of General Havlock appears to be considering using the canon left in Mowbray park - in protest at moving his bin collection to Tuesdays instead of Thursday.</p>
-            <p>The cannon, left pointing at the civic centre in case of another infestation of the Rage virus seems to be the target of the Victorian Millitaryman Shade's attentions. When pressed, the wraith said "I'm buried at Lucknow, so getting here to put the bins out for Tuesday is impossible, the connecting flights just aren't there."</p>
-            <p>Queen Victoria, Greyfriars Bobby and Sunderland City council were unavailable for comment.</p>
-        </div>
-    </article>
-<hr>
-    <article>
-        <img src="Images/CrookedBlandfordStreet.jpg" alt="Blandford street" id="street" height="480" width="640">
-
-        <div id="StreetText">
-
-            <h3>Blandford Street Found "Wonky"</h3>
-
-            <p>Keen shoppers were underterred as Blandford Street at the heart of the city was seen to be a bit skew-wiff.From Herbet Brown's to Debenhams, the whole street appeared tilted off to the rught somehow.</p>
-            <p>We contacted a pokesperson for H&T Pawnbrokers said "To be honest, we haven't noticed anything unusal outside. There has been no drop off in trade, punters are here putting their wedding rings on tick just a desperately as usual.”</p>Our roving photohrapher, Nathanial Ventricle, took this shocking image moments after picking up his new tripod form Chas Eagle's and Sons. Nathanial said "You know what's odd, the people on Blandford Street look wonky too- normally they'd be upri...oh.. wait…”
-        </div>
-    </article>
-<hr>
-    <article>
-        <img src="Images/AmysWinehouse.jpg" alt="Amys Winehouse" id="amy" height="480" width="640">
-
-        <div id="AmyText">
-
-            <h3>Amy's Winehouse Urged into Rehab</h3>
-
-            <p>Amy's Winehouse has said "no no no" to calls to enter rehab after complaints of rowdy behaviour about the songstressly-named offy. A neighbour, who wishes to remnain anonymous, has seen Amy's Winehouse selling the following in broad daylight:</p>
-
-            <ul>
-                <li>Fine wine & Champagnes</li>
-                <li>Rough Ciders & Spirits</li>
-                <li>Terry's Chocolate Orange, Witch no one ever seems to buy</li>
-            </ul>
-
-            <p>Amy's Winehouse ain't got the time to make a comment, adding the retail outlet's daddy thinks she's fine.</p>
-        </div>
-    </article>
-<hr>
     <footer>
 
         <img src="Images/Our Editor.jpg" alt="Editor" id="OurEditor" height="241" width="190">
 
         <div id="Editor">
-            <h3>About our Editor</h3>
+            <h4>About our Editor</h4>
             <p>Our cheif editor, Ahab McRadgie has had a long career in the media, despite his youth. Starting off taxing dafties for 20p, who he assured he needed the money to get home to his dying grandmother. He soon set to work selling the Big Issue, then graduated on to harder, more potent local newspapers. Ahab has been given a Regional Press Award for his scoop "Ryhope man catches train" and a restraining order after the incident with the inflatible crocodile, the vodka and small arms we don't talk about, but none one will ever forget. Even though we tried hard. So, so hard.</p>
         </div>
 
     </footer>
 </div>
 
-</body>
+<script>
 
+    var validate = function() {
+
+        var email = document.getElementById("email").value;
+        var message = document.getElementById("message").value;
+
+
+            if (!email) {
+                highlight("email");
+
+                if (!message) {
+                    highlight("message");
+                }
+                return false;
+
+            }
+            if (!message) {
+                highlight("message");
+                return false;
+            }
+            else {
+                return true;
+            }
+
+            };
+
+        var highlight = function (error) {
+            var element = document.getElementById(error);
+            element.classList.add("error");
+
+            window.setInterval(function () {
+                element.classList.remove("error")
+            }, 1500)
+        }
+
+</script>
+
+</body>
 </html>
